files/script/test_all/compile_error/var/test_var_error1.ll
require "os"
import os.print

def main()
{
    var i[0]

    os.print("i = ", i)
}
#script("script/test_all/compile_error/var/test_var_error1.ll")
